--- a/ros_foxy_ws/src/Two_Wheel_sim/CMakeLists.txt
+++ b/ros_foxy_ws/src/Two_Wheel_sim/CMakeLists.txt
@@ -20,9 +20,10 @@ find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
-link_directories(
+install(DIRECTORY
   urdf
   launch
+  DESTINATION share/${PROJECT_NAME}
   )
 
 if(BUILD_TESTING)
