Working on controller

--- a/ros_foxy_ws/install/share/two_wheel_control/package.xml
+++ b/ros_foxy_ws/install/share/two_wheel_control/package.xml
@@ -12,6 +12,9 @@
   <depend>ros2_control</depend>
   <depend>rclcpp</depend>
   <depend>two_wheel_control_msgs</depend>
+  <depend>controller_interface</depend>
+  <depend>pluginlib</depend>
+  <depend>rclcpp_lifecycle</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
