--- a/ros_foxy_ws/src/two_wheel_control_msgs/CMakeLists.txt
+++ b/ros_foxy_ws/src/two_wheel_control_msgs/CMakeLists.txt
@@ -20,6 +20,8 @@ find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Command.msg"
+  "msg/State.msg"
+  "msg/TuningCommand.msg"
 )
 # uncomment the following section in order to fill in
 # further dependencies manually.
