--- a/ros_foxy_ws/src/two_wheel_sim/config/controller.yaml
+++ b/ros_foxy_ws/src/two_wheel_sim/config/controller.yaml
@@ -12,6 +12,8 @@ controller_manager:
 
 two_wheel_control:
   ros__parameters:
+    update_rate: 100
+
     body_I_diag:
       - 1.9
       - 3.3
@@ -28,6 +30,29 @@ two_wheel_control:
 
     max_angle: 0.4
 
+    P:
+      -0
+      -1
+      -0
+      -0
+      -0
+      -1
+    I:
+      -0
+      -0
+      -0
+      -0
+      -0
+      -0
+    D:
+      -0
+      -0
+      -0
+      -0
+      -0
+      -0
+    max_I:
+
     # GOOD FOR 100 Hz
     # Kp:
     #   - 0.01
@@ -37,15 +62,15 @@ two_wheel_control:
     #   - 0.013
     #   - 30.0
     #   - 15.0
-
-    Kp:
-      - 0.10
-      - 55.0
-      - 50.0
-    Kd:
-      - 0.07
-      - 30.0
-      - 15.0
+    # OLDER VERSION, DEPRECATED
+    # Kp:
+    #   - 0.10
+    #   - 55.0
+    #   - 50.0
+    # Kd:
+    #   - 0.07
+    #   - 30.0
+    #   - 15.0
 
     tuning: true
 
