--- a/ros_foxy_ws/src/two_wheel_control/CMakeLists.txt
+++ b/ros_foxy_ws/src/two_wheel_control/CMakeLists.txt
@@ -26,6 +26,7 @@ find_package(hardware_interface REQUIRED)
 find_package(pluginlib REQUIRED)
 find_package(rclcpp_lifecycle REQUIRED)
 find_package(two_wheel_control_msgs REQUIRED)
+find_package(control_toolbox REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
@@ -46,6 +47,7 @@ ament_target_dependencies(${PROJECT_NAME}
   rclcpp
   rclcpp_lifecycle
   two_wheel_control_msgs
+  control_toolbox
 )
 target_compile_definitions(${PROJECT_NAME} PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
 pluginlib_export_plugin_description_file(controller_interface two_wheel_ID_controller.xml)
