--- a/ros_foxy_ws/src/two_wheel_control/package.xml
+++ b/ros_foxy_ws/src/two_wheel_control/package.xml
@@ -15,6 +15,9 @@
   <depend>controller_interface</depend>
   <depend>pluginlib</depend>
   <depend>rclcpp_lifecycle</depend>
+  <depend>control_toolbox</depend>
+  <depend>nav_msgs</depend>
+  <depend>tf2_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
