--- a/ros_foxy_ws/src/two_wheel_sim/config/controller.yaml
+++ b/ros_foxy_ws/src/two_wheel_sim/config/controller.yaml
@@ -1,18 +1,20 @@
 controller_manager:
   ros__parameters:
-    update_rate: 100 
+    update_rate: 1000 
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
     two_wheel_control:
       type: two_wheel_control/TwoWheelIDController 
+
+    use_sim_time: true
       
 
 
 two_wheel_control:
   ros__parameters:
-    update_rate: 100.0
+    update_rate: 1000.0
 
     body_I_diag:
       - 1.9
@@ -26,17 +28,17 @@ two_wheel_control:
     wheel_mass: 0.1
     body_height: 0.5
     wheel_radius: 0.1
-    wheel_distance: 0.4
+    wheel_distance: 0.41
 
     max_angle: 0.6
 
-    # VELOCITY CONTROL
+    # Velocity Control 1000Hz
     P:
       - 0.0
-      - 200.0
+      - 50.0
       - 100.0
-      - 0.015
-      - 10.0
+      - 0.02
+      - 5.0
       - 50.0
     I:
       - 0.0
@@ -60,7 +62,37 @@ two_wheel_control:
       - 100.0
       - 100.0
 
-    # POSITION CONTROL
+    # VELOCITY CONTROL 100 Hz
+    # P:
+    #   - 0.0
+    #   - 200.0
+    #   - 100.0
+    #   - 0.015
+    #   - 10.0
+    #   - 50.0
+    # I:
+    #   - 0.0
+    #   - 100.0
+    #   - 10.0
+    #   - 0.0
+    #   - 0.0
+    #   - 0.0
+    # D:
+    #   - 0.0
+    #   - 0.0
+    #   - 0.0
+    #   - 0.0
+    #   - 0.0
+    #   - 0.0
+    # max_I:
+    #   - 100.0
+    #   - 100.0
+    #   - 100.0
+    #   - 100.0
+    #   - 100.0
+    #   - 100.0
+
+    # POSITION CONTROL 100Hz
     # P:
     #   - 0.01
     #   - 200.0
