--- a/ros_foxy_ws/src/two_wheel_control/package.xml
+++ b/ros_foxy_ws/src/two_wheel_control/package.xml
@@ -19,6 +19,14 @@
   <depend>nav_msgs</depend>
   <depend>tf2_msgs</depend>
 
+  <!-- Non ROS2 dependencies 
+  <depend>armadillo</depend>
+  <depend>eigen3</depend>
+  <depend>boost</depend>
+  <depend>kindr</depend>
+  <depend>control_toolbox</depend> -->
+
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
