--- a/ros_foxy_ws/.vscode/settings.json
+++ b/ros_foxy_ws/.vscode/settings.json
@@ -75,6 +75,8 @@
         "cfenv": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "unordered_set": "cpp",
+        "valarray": "cpp"
     }
 }
