--- a/ros_foxy_ws/src/two_wheel_control/CMakeLists.txt
+++ b/ros_foxy_ws/src/two_wheel_control/CMakeLists.txt
@@ -19,6 +19,9 @@ endif()
 
 add_compile_options(-g)
 
+# add_definitions(-DHPIPM)
+
+set(CMAKE_CXX_FLAGS -pthread)
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(ros2_control REQUIRED)
@@ -28,26 +31,69 @@ find_package(hardware_interface REQUIRED)
 find_package(pluginlib REQUIRED)
 find_package(rclcpp_lifecycle REQUIRED)
 find_package(two_wheel_control_msgs REQUIRED)
+find_package(ct_core REQUIRED)
+find_package(ct_optcon)
+find_package(tf2_msgs REQUIRED)
 find_package(control_toolbox REQUIRED)
 find_package(nav_msgs REQUIRED)
-find_package(tf2_msgs REQUIRED)
+
+# For balsfeo and HPIPM since they are in /opt
+# list(APPEND CMAKE_PREFIX_PATH "/opt")
+find_package(blasfeo REQUIRED)
+find_package(hpipm REQUIRED)
+
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 
+# message(WARNING ${hpipm_INCLUDE_DIRS})
+
+add_library(diff_drive_mpc include/two_wheel_control/diff_drive_MPC.hpp)
+set_target_properties(diff_drive_mpc PROPERTIES LINKER_LANGUAGE CXX)
+target_link_libraries(diff_drive_mpc blasfeo hpipm ct_core ct_optcon)
+ament_target_dependencies(diff_drive_mpc
+  ct_core
+  ct_optcon
+  blasfeo
+  hpipm
+)
+
 add_executable(two_wheel_sliding_balance
   src/two_wheel_sliding_balance.cpp
 )
-
 target_include_directories(two_wheel_sliding_balance
   PRIVATE
   include
 )
-
 ament_target_dependencies(two_wheel_sliding_balance
   rclcpp
   two_wheel_control_msgs
 )
+
+add_executable(diff_drive_mpc_node
+  src/diff_drive_MPC_node.cpp
+)
+target_include_directories(diff_drive_mpc_node
+  PRIVATE
+  include
+)
+ament_target_dependencies(diff_drive_mpc_node
+  rclcpp
+  two_wheel_control_msgs
+)
+
+add_executable(two_wheel_control_testing test/test.cpp)
+target_link_libraries(two_wheel_control_testing
+  diff_drive_mpc
+)
+add_dependencies(two_wheel_control_testing 
+  diff_drive_mpc
+)
+target_include_directories(two_wheel_control_testing
+  PRIVATE
+  include
+)
+
 
 add_library(two_wheel_control
   SHARED
@@ -56,25 +102,25 @@ add_library(two_wheel_control
   src/two_wheel_EKF.cpp
   src/two_wheel_input_forward.cpp
 )
-
-
 target_include_directories(two_wheel_control
   PRIVATE
   include
 )
-
 ament_target_dependencies(two_wheel_control
   controller_interface
   hardware_interface
+  control_toolbox
   pluginlib
   rclcpp
   rclcpp_lifecycle
   two_wheel_control_msgs
-  control_toolbox
+  ct_core
+  ct_optcon
   nav_msgs
   tf2_msgs
+  blasfeo
+  hpipm
 )
-
 target_compile_definitions(two_wheel_control PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
 pluginlib_export_plugin_description_file(controller_interface two_wheel_ID_controller.xml)
 pluginlib_export_plugin_description_file(controller_interface two_wheel_MPC_controller.xml)
@@ -85,23 +131,25 @@ install(DIRECTORY
   include/  
   DESTINATION include
 )
-
 install(DIRECTORY
   config
   launch
   DESTINATION share/${PROJECT_NAME}
 )
-
 install(
   TARGETS
   two_wheel_sliding_balance
+  diff_drive_mpc_node
+  two_wheel_control_testing
+  diff_drive_mpc
   DESTINATION lib/${PROJECT_NAME}
 )
-
 install(
   TARGETS
   two_wheel_control
   two_wheel_sliding_balance
+  diff_drive_mpc_node
+  diff_drive_mpc
   RUNTIME DESTINATION bin
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
@@ -122,6 +170,7 @@ ament_export_include_directories(
 )
 ament_export_libraries(
   two_wheel_control
+  diff_drive_mpc
 )
 
 ament_package()
